basic 7 TA strategies

--- a/strategies/rsi/rsi1_cut_with_highest_vary.ipynb
+++ b/strategies/rsi/rsi1_cut_with_highest_vary.ipynb
@@ -354,82 +354,16 @@
     "    # print(df[['day_starting_at_4am', 'close', 'rsi', 'signal', 'position', 'cumulative_returns', 'benchmark_returns', 'entry_price', 'exit_price']].tail(10))\n",
     "\n",
     "    # df.to_csv(\"../../results/rsi/rsi_with_stoploss_takeprofit_sell_signal.csv\")\n",
-    "    excel_path = \"../../results/results.xlsx\"\n",
-    "    get_performance(df=df, title=f\"rsi_cut(vary)_highest{cut}%\", add_to_excel=True, file_path=excel_path)\n"
+    "    # excel_path = \"../../results/results.xlsx\"\n",
+    "    # get_performance(df=df, title=f\"rsi_cut(vary)_highest{cut}%\", add_to_excel=True, file_path=excel_path)\n",
+    "    df.to_csv(f\"temp_rsi_cut_{cut}.csv\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "======Investment Summary======\n",
-      "Strategy        : rsi_cut(vary)_highest1%\n",
-      "total_return    : 37.46\n",
-      "cagr            : 10.1\n",
-      "mdd             : 24.23\n",
-      "total_return_w_fee : 16.21\n",
-      "cagr_w_fee      : 4.65\n",
-      "mdd_w_fee       : 30.06\n",
-      "investing_days  : 1207\n",
-      "==============================\n",
-      "======Investment Summary======\n",
-      "Strategy        : rsi_cut(vary)_highest2%\n",
-      "total_return    : 138.78\n",
-      "cagr            : 30.11\n",
-      "mdd             : 28.38\n",
-      "total_return_w_fee : 101.85\n",
-      "cagr_w_fee      : 23.66\n",
-      "mdd_w_fee       : 33.22\n",
-      "investing_days  : 1207\n",
-      "==============================\n",
-      "======Investment Summary======\n",
-      "Strategy        : rsi_cut(vary)_highest3%\n",
-      "total_return    : 180.7\n",
-      "cagr            : 36.63\n",
-      "mdd             : 35.86\n",
-      "total_return_w_fee : 138.24\n",
-      "cagr_w_fee      : 30.02\n",
-      "mdd_w_fee       : 40.07\n",
-      "investing_days  : 1207\n",
-      "==============================\n",
-      "======Investment Summary======\n",
-      "Strategy        : rsi_cut(vary)_highest5%\n",
-      "total_return    : 286.32\n",
-      "cagr            : 50.49\n",
-      "mdd             : 28.6\n",
-      "total_return_w_fee : 231.19\n",
-      "cagr_w_fee      : 43.64\n",
-      "mdd_w_fee       : 31.57\n",
-      "investing_days  : 1207\n",
-      "==============================\n",
-      "======Investment Summary======\n",
-      "Strategy        : rsi_cut(vary)_highest7%\n",
-      "total_return    : 193.46\n",
-      "cagr            : 38.48\n",
-      "mdd             : 37.1\n",
-      "total_return_w_fee : 152.59\n",
-      "cagr_w_fee      : 32.34\n",
-      "mdd_w_fee       : 40.08\n",
-      "investing_days  : 1207\n",
-      "==============================\n",
-      "======Investment Summary======\n",
-      "Strategy        : rsi_cut(vary)_highest10%\n",
-      "total_return    : 94.87\n",
-      "cagr            : 22.36\n",
-      "mdd             : 55.51\n",
-      "total_return_w_fee : 69.42\n",
-      "cagr_w_fee      : 17.28\n",
-      "mdd_w_fee       : 57.42\n",
-      "investing_days  : 1207\n",
-      "==============================\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cuts = [1, 2, 3, 5, 7, 10]\n",
     "for cut in cuts:\n",
